1
   Compiling pgqt v0.1.0 (/Users/markb/dev/pgqt)
warning: unused import: `init_catalog`
   --> src/functions.rs:239:26
    |
239 |     use crate::catalog::{init_catalog, FunctionMetadata, ReturnTypeKind, ParamMode};
    |                          ^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused doc comment
  --> src/plpgsql/sqlstate.rs:36:1
   |
36 | /// Mapping from condition names to SQLSTATE codes
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rustdoc does not generate documentation for macro invocations
   |
   = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion
   = note: `#[warn(unused_doc_comments)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `rusqlite::types::Value as SqliteValue`
  --> src/plpgsql/mod.rs:75:9
   |
75 |     use rusqlite::types::Value as SqliteValue;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
    --> src/transpiler.rs:2004:25
     |
2001 | /                 match metadata.return_type_kind {
2002 | |                     ReturnTypeKind::Void => {
2003 | |                         // For VOID functions, execute and return NULL
2004 | |                         format!("pgqt_plpgsql_call_void('{}', {})", func_name_literal, args_str)
     | |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `String`
...    |
2014 | |                 }
     | |_________________- expected this to be `()`
     |
     = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using a semicolon here
     |
2014 |                 };
     |                  +
help: you might have meant to return this value
     |
2004 |                         return format!("pgqt_plpgsql_call_void('{}', {})", func_name_literal, args_str);
     |                         ++++++                                                                         +

error[E0308]: mismatched types
    --> src/transpiler.rs:2008:25
     |
2001 | /                 match metadata.return_type_kind {
2002 | |                     ReturnTypeKind::Void => {
2003 | |                         // For VOID functions, execute and return NULL
2004 | |                         format!("pgqt_plpgsql_call_void('{}', {})", func_name_literal, args_str)
...    |
2008 | |                         format!("(SELECT * FROM pgqt_plpgsql_call_setof('{}', {}))", func_name_literal, args_str)
     | |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `String`
...    |
2014 | |                 }
     | |_________________- expected this to be `()`
     |
     = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using a semicolon here
     |
2014 |                 };
     |                  +
help: you might have meant to return this value
     |
2008 |                         return format!("(SELECT * FROM pgqt_plpgsql_call_setof('{}', {}))", func_name_literal, args_str);
     |                         ++++++                                                                                          +

error[E0308]: mismatched types
    --> src/transpiler.rs:2012:25
     |
2001 | /                 match metadata.return_type_kind {
2002 | |                     ReturnTypeKind::Void => {
2003 | |                         // For VOID functions, execute and return NULL
2004 | |                         format!("pgqt_plpgsql_call_void('{}', {})", func_name_literal, args_str)
...    |
2012 | |                         format!("pgqt_plpgsql_call_scalar('{}', {})", func_name_literal, args_str)
     | |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `String`
2013 | |                     }
2014 | |                 }
     | |_________________- expected this to be `()`
     |
     = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using a semicolon here
     |
2014 |                 };
     |                  +
help: you might have meant to return this value
     |
2012 |                         return format!("pgqt_plpgsql_call_scalar('{}', {})", func_name_literal, args_str);
     |                         ++++++                                                                           +

For more information about this error, try `rustc --explain E0308`.
warning: `pgqt` (lib test) generated 3 warnings
error: could not compile `pgqt` (lib test) due to 3 previous errors; 3 warnings emitted
